#2 ukm  :: usunięcie danych bezpieczeństwa z konfiguracji

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,10 +1,8 @@
 # Konfiguracja bazy danych
 spring.datasource.url=jdbc:mysql://localhost:3306/events_db
-spring.datasource.username=admin
-spring.datasource.password=s3cr3t
 
 # Konfiguracja Hibernate & JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.open-in-view=false
 
