--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -12,5 +12,5 @@ spring.jpa.open-in-view=false
 logging.level.root=warn
 logging.level.sql=debug
 
-logging.level.honestit.projects.events=debug
+logging.level.honestit.projects.eventuator=debug
 logging.level.org.springframework.web=debug
