#7 i18n :: Wyodrębnienie właściwości walidacyjnych do osobnych plików

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@
 spring.application.name=Eventuator
 
 # Pliki właściwości
-spring.messages.basename=messages
+spring.messages.basename=messages,validation
