#11 rejestracja-2 :: połączenie encji użyt. z tokenem

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -14,3 +14,4 @@ logging.level.sql=debug
 
 logging.level.honestit.projects.eventuator=debug
 logging.level.org.springframework.web=debug
+logging.level.org.hibernate=debug
