--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -15,3 +15,11 @@ logging.level.sql=debug
 logging.level.honestit.projects.eventuator=debug
 logging.level.org.springframework.web=debug
 logging.level.org.hibernate=debug
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+# Określane przy uruchomieniu aplikacji ;)
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.auth=true
+spring.mail.properties.starttls.enable=true
