--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -19,7 +19,7 @@ logging.level.org.hibernate=debug
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 # Określane przy uruchomieniu aplikacji ;)
-spring.mail.username=
-spring.mail.password=
-spring.mail.properties.auth=true
-spring.mail.properties.starttls.enable=true
+#spring.mail.username=
+#spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
