--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -23,3 +23,6 @@ spring.mail.port=587
 #spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+account.activation.mail-account=eventuator@events.pl
+account.activation.token-seconds=86400
