--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -23,5 +23,7 @@ spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+account.activation.app-host=localhost
+account.activation.app-port=8080
 account.activation.mail-account=eventuator@events.pl
 account.activation.token-seconds=86400
